--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,48 +4,61 @@
 
 html{
     position: relative;
-    min-height: 100%;
+    height: 100%;
 }
 
-
-#niv{
-    border: 1px none;
-    background-color:rgb(248, 107, 154);
-    position : sticky;
+.topnav {
+    position: sticky;
     top:0;
-    display: flex;
-}
-
-#Navbar{
-    
-    padding : 0;
-    width: 50%;
-    list-style-type: none;
-}
-
-#ffs{
+    z-index: 2;
+    overflow: hidden;
+    background-color: rgb(248, 107, 154) ;
+  }
+  
+  .topnav a {
     float: left;
-    padding-left: 15px;
-    padding-top: 10px;
-}
-
-#nav1 a{
-    margin-left: 10px;
-}
-
-#nav1 a, #nav2 a,#nav3 a,#nav4 a{
-    float : left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    text-align:center;
-    color:black;
-    padding: 14px 50px;
-    font-size: larger;
-    
-}
-
-#nav1 a:hover, #nav2 a:hover,#nav3 a:hover,#nav4 a:hover{
+    font-size: 17px;
+    line-height: 30px;
+    margin: auto 0;
+  }
+  
+  .topnav a:hover {
     background-color:rgb(240, 172, 195);
-}
+  }
+  
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+
+
 
 #cgt{
     position: fixed;
@@ -86,7 +99,7 @@ body{
 .cbox{
     max-width: 1000px;
     position : relative;
-    margin: 25px auto;
+    margin: 0 auto;
     border: 1px, solid,rgb(240, 209, 228); 
 }
 
@@ -146,6 +159,12 @@ body{
     background: rgba(255, 0, 200, 0.986);
 }
 
+#fingindex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #imgh{
     /* margin-left: 419px;
     margin-right: auto; */
@@ -162,11 +181,12 @@ body{
 
 #con{
     float: left;
-    margin: auto;
+    /* margin: 0 auto; */
+    place-self: center;
 }
 
 #srtb{
-    margin:25px auto;
+    margin:0 auto;
     border: 5px solid palevioletred;
     text-align: center;
     vertical-align: middle;
@@ -196,12 +216,11 @@ body{
 }
 
 
-footer{
+.foot{
     background-color: rgb(248, 107, 154) ;
     padding: 25px auto;
     text-align: center;
     font: bold 12px/30px Tahoma, sans-serif;
-    position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
@@ -233,7 +252,8 @@ footer{
 
 .pp{
     display:none;
-    vertical-align: middle;
+    /* vertical-align: middle; */
+    text-align: center;
 }
 
 .pp:first-of-type{
@@ -245,8 +265,8 @@ footer{
     position: absolute;
     top: 50%;
     width: auto;
-    margin-top: -22px;
-    padding: 16px;
+    /* margin-top: -22px;
+    padding: 16px; */
     color: palevioletred;
     font-weight: bold;
     font-size: 18px;
@@ -258,7 +278,7 @@ footer{
 
 .nxt{
     right: 0;
-    margin-right: 228px;
+    /* margin-right: 228px; */
     border-radius: 3px 0 0 3px;
 }
 
@@ -266,15 +286,20 @@ footer{
     background-color: rgba(0, 0, 0, 0.199);
 }
 
-.aln:after{
+.aln{
     content: "";
-    display: table;
+    /* display: table; */
     clear: both;
+    display: flex;
+justify-content: center;
+align-items: center;
 }
+
 
 .po{
     float: left;
-    margin-left: 10px;
+    /* margin-left: 10px; */
+    text-align: center;
     width: 17%;
 }
 
@@ -290,10 +315,17 @@ footer{
     cursor: pointer;
 }
 
-.con{
+#bigone{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.contx{
     position: relative;
-    margin-left: 500px;
-    margin-top: 25px;
+    /* margin-left: 500px;
+    margin-top: 25px; */ 
     max-width: 700px;
 
 }
@@ -301,9 +333,13 @@ footer{
 .words{
     text-align: center;
     font: 29px Arial,sans-serif;
-    margin-left: 140px;
-    margin-right:175px;
-    padding: 10px;
+    /* margin-left: 140px;
+    margin-right:175px; */
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding: 10px; */
     border: 2px dotted rgba(216, 112, 147, 0.856);
 }
 
@@ -315,32 +351,49 @@ footer{
     display: block;
 }
 
+video{
+    width: 450px;
+    height: 300px;
+}
+
+#bone{
+    display: flex;
+justify-content: center;
+align-items: center;
+
+}
 .foru{
-    height: 1205px;
-    width: 800px;
+    height: calc(1005px - 8vw);
+    width: calc(700px - 8vw);
     border: 4px solid palevioletred;
-    margin-left: 350px;
-    margin-top: 30px;
+    /* margin-left: 350px;
+    margin-top: 30px; */
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    /* margin: 0 auto; */
     background-color: rgb(228, 194, 225) ;
+    overflow: auto;
 }
 
 
 .av{
     border-radius: 50%; 
-    width:50px; 
+    width:7%; 
     float : left;
     padding-left: 5px;
 }
 
 .msg{
-    padding-left: 70px; 
-    padding-top: 10px;
-    font-size: 25px;
+    padding-left: 70px ; 
+    padding-top: 10px ;
+    font-size: 25px ;
 }
 
 .info{
-    padding-left: 680px;
+    padding-left: calc(680px - 8vmin);
     font: italic small-caps 12px Verdana ,sans-serif; 
+    display: none;
 }
 
 #pass:focus, #user:focus{
@@ -350,6 +403,8 @@ footer{
 #submit{
     background-color:palevioletred;
     color:wheat;
+    border-radius: 5px;
+    padding: 10px 25px;
 }
 
 .ina{
@@ -357,7 +412,7 @@ footer{
     text-align: center;
     color: rgb(63, 60, 60);
     text-decoration: underline;
-    padding-top: 10px;
+    padding-top: calc(10px - 8vw);
 }
 
 /* Responsive : */
@@ -365,7 +420,7 @@ footer{
 #indexcontainer{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.2fr 1fr 0.2fr;
+    grid-template-rows: 0.15fr 0.8fr 0.15fr;
     grid-template-areas: 
     "sit"
     "figindex"
@@ -387,7 +442,7 @@ footer{
     grid-area: con;
 }
 
-@media (max-width:500px) {
+@media only screen and (max-width:600px) {
     #insta, #fb, #ytb{
        width:40%;
        height: 50%;
@@ -398,4 +453,35 @@ footer{
         height: 90%;
     }
 
+   
+   #cgt{
+       display: none;
+   }
+
+   #pbx{
+   margin: 0 auto;
+   }
+   #dojtb{
+       float: none;
+       margin:0 auto;
+   }
+  form input{
+      display: block;
+  }
+  form label{
+      padding: 0 !important;
+  }
+  #submit{
+      padding: 10px 30px;
+  }
+  .words{
+      font-size: 20px;
+  }
+  video{
+      width:85%;
+      height: auto;
+  }
+   body{
+       margin:15px;
+   }
 }
