--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,7 +45,10 @@ html{
   }
   
   @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
+    .topnav.responsive {
+        position: sticky;
+        top:0;
+        z-index: 2;;}
     .topnav.responsive .icon {
       position: absolute;
       right: 0;
